--- a/login.html
+++ b/login.html
@@ -7,36 +7,42 @@
 <style>
 :root{--green:#32ff8a;--bg:#031c11;}
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace;}
-body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;}
+body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
+     user-select:none; -webkit-user-select:none; -ms-user-select:none;}
 
-/* ── 둥근 베젤 ── */
-#cabinet{
-  width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
+/* ── Pony Island 식 CRT 베젤 ── */
+#cabinet{width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
   border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
-  display:flex;justify-content:center;align-items:center;
-}
+  display:flex;justify-content:center;align-items:center;}
+
 /* ── 모니터 유리판 ── */
-#monitor{
-  position:relative;width:97%;height:92%;background:var(--bg);
-  border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;
-}
-/* ── 볼록 CRT 화면 ── */
+#monitor{position:relative;width:97%;height:92%;background:var(--bg);
+  border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;}
+
+/* ── 볼록 CRT 화면 ── */
 #screen{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;
-  color:var(--green);text-shadow:0 0 4px var(--green);transform:perspective(1000px) translateZ(90px);}
+  color:var(--green);text-shadow:0 0 4px var(--green);
+  transform:perspective(1000px) translateZ(90px);outline:none;
+  user-select:none; -webkit-user-select:none; -ms-user-select:none;}
 #screen::before{content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
   mix-blend-mode:overlay;pointer-events:none;}
 #screen::after{content:"";position:absolute;inset:0;
-  background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);pointer-events:none;}
+  background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
+  pointer-events:none;}
+
+/* CRT 노이즈 */
 #noise{position:absolute;inset:-35%;
-  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
+  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWx0PSIjRkZGIi8+PC9zdmc+");
   opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
 @keyframes noise{to{transform:translate(50%,50%);}}
 
-/* 터미널 텍스트 */
-#terminal{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;pointer-events:none;}
+/* ── 터미널 영역 ── */
+#termWrap{width:90%;height:85%;overflow-y:auto;pointer-events:none;}
+#terminal{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;}
 .blink{animation:blink .8s step-end infinite;}
 @keyframes blink{50%{opacity:0;}}
+
 @keyframes glitch{0%{transform:translate(0,0);}25%{transform:translate(-1px,1px);}
 50%{transform:translate(1px,-1px);}75%{transform:translate(-1px,-1px);}
 100%{transform:translate(1px,1px);}}
@@ -46,6 +52,7 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
 <div id="cabinet">
   <div id="monitor">
     <div id="screen" tabindex="0">
+      <div id="termWrap">
 <pre id="terminal">ULTIM809 COMPUTER BY MATT SARNOFF
 DEBUG ROM v0.3 – 28 JUN 2010
 512KB AVAILABLE RAM
@@ -56,62 +63,52 @@ OFFSETS: F33 R279 D311
 
 MONITOR READY.
 &gt; <span id="typed" class="blink"></span></pre>
+      </div>
       <div id="noise"></div>
     </div>
   </div>
 </div>
 
 <script>
-/* ── CONFIG ── */
 const PASS="WATCHME";
-let buf="", ambience=false, history=[], histIdx=-1;
+let buf="", ambience=false;
 
-/* AudioCtx */
+/* AudioCtx & 사운드 */
 let ctx; const AC=()=>ctx||(ctx=new (window.AudioContext||window.webkitAudioContext)());
-
-/* Ambience */
-function startAmbience(){
-  if(ambience) return; ambience=true;
-  const ac=AC();
-  const hum=ac.createOscillator(), g1=ac.createGain();
-  hum.type="sine";hum.frequency.value=50;g1.gain.value=.02;hum.connect(g1).connect(ac.destination);hum.start();
-  const size=ac.sampleRate*2, nBuf=ac.createBuffer(1,size,ac.sampleRate), d=nBuf.getChannelData(0);
-  for(let i=0;i<size;i++) d[i]=Math.random()*2-1;
-  const noise=ac.createBufferSource();noise.buffer=nBuf;noise.loop=true;
-  const g2=ac.createGain();g2.gain.value=.015;noise.connect(g2).connect(ac.destination);noise.start();
-}
-
-/* short tone */
 function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
   o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
   o.start();g.gain.exponentialRampToValueAtTime(0.0001,ac.currentTime+.35);o.stop(ac.currentTime+.36);}
+function startAmb(){if(ambience)return;ambience=true;
+  const ac=AC(),hum=ac.createOscillator(),g=ac.createGain();
+  hum.type="sine";hum.frequency.value=50;g.gain.value=.02;hum.connect(g).connect(ac.destination);hum.start();
+  const sz=ac.sampleRate*2,b=ac.createBuffer(1,sz,ac.sampleRate),d=b.getChannelData(0);
+  for(let i=0;i<sz;i++)d[i]=Math.random()*2-1;
+  const ns=ac.createBufferSource();ns.buffer=b;ns.loop=true;
+  const gn=ac.createGain();gn.gain.value=.015;ns.connect(gn).connect(ac.destination);ns.start();}
 
-/* DOM */
-const screen=document.getElementById("screen"), typed=document.getElementById("typed"), term=document.getElementById("terminal");
+/* DOM 요소 */
+const screen=document.getElementById("screen"),tw=document.getElementById("termWrap"),
+      term=document.getElementById("terminal"),typed=document.getElementById("typed");
+
 screen.addEventListener("keydown",e=>{
-  startAmbience(); const key=e.key;
-  if(key==="ArrowUp"){if(history.length){histIdx=Math.max(0,histIdx-1);buf=history[histIdx];typed.textContent=buf;}return;}
-  if(key==="ArrowDown"){if(history.length){histIdx=Math.min(history.length-1,histIdx+1);buf=history[histIdx]||"";typed.textContent=buf;}return;}
-  if(key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
-  if(key==="Enter"){e.preventDefault();processCmd();return;}
-  if(key.length===1 && buf.length<64){buf+=key.toUpperCase();typed.textContent=buf;}
+  startAmb();
+  if(e.key==="ArrowUp"){tw.scrollBy({top:-40,behavior:"smooth"});return;}
+  if(e.key==="ArrowDown"){tw.scrollBy({top:40,behavior:"smooth"});return;}
+  if(e.key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
+  if(e.key==="Enter"){e.preventDefault();run();return;}
+  if(e.key.length===1 && buf.length<64){buf+=e.key.toUpperCase();typed.textContent=buf;}
 });
 screen.focus();
 
-function appendLine(t){term.innerHTML+=`\n${t}`;}
-
-function processCmd(){
-  appendLine(`\n> ${buf}`);
-  history.push(buf);histIdx=history.length;
+function append(t){term.innerHTML+=`\n${t}`;setTimeout(()=>tw.scrollTop=tw.scrollHeight,0);}
+function run(){
+  append(`> ${buf}`);
   if(buf===PASS){
-    appendLine("ACCESS GRANTED.");
-    tone(440,"triangle");typed.classList.remove("blink");
+    append("ACCESS GRANTED.");tone(440,"triangle");typed.classList.remove("blink");
     setTimeout(()=>location.href="cctv.html",1400);
   }else{
-    appendLine("ACCESS DENIED.");
-    screen.style.animation="glitch .28s 2";tone(120,"sawtooth");
-    setTimeout(()=>screen.style.animation="none",600);
-    typed.classList.add("blink");
+    append("ACCESS DENIED.");screen.style.animation="glitch .28s 2";tone(120,"sawtooth");
+    setTimeout(()=>screen.style.animation="none",600);typed.classList.add("blink");
   }
   buf="";typed.textContent="";
 }
