--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
      user-select:none; -webkit-user-select:none; -ms-user-select:none;}
 
-/* ── Pony Island 식 CRT 베젤 ── */
+/* ── CRT 베젤 ── */
 #cabinet{width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
   border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
   display:flex;justify-content:center;align-items:center;}
