--- a/login.html
+++ b/login.html
@@ -8,9 +8,9 @@
 :root{--green:#32ff8a;--bg:#031c11;}
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace;}
 body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
-     user-select:none; -webkit-user-select:none; -ms-user-select:none;}
+     user-select:none;-webkit-user-select:none;-ms-user-select:none;}
 
-/* ── CRT 베젤 ── */
+/* ── 둥근 CRT 베젤 ── */
 #cabinet{width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
   border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
   display:flex;justify-content:center;align-items:center;}
@@ -22,8 +22,9 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
 /* ── 볼록 CRT 화면 ── */
 #screen{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;
   color:var(--green);text-shadow:0 0 4px var(--green);
-  transform:perspective(1000px) translateZ(90px);outline:none;
-  user-select:none; -webkit-user-select:none; -ms-user-select:none;}
+  transform:perspective(1000px) translateZ(90px);outline:none;}
+
+/* 스캔라인 + 비네팅 */
 #screen::before{content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
   mix-blend-mode:overlay;pointer-events:none;}
@@ -33,19 +34,17 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
 
 /* CRT 노이즈 */
 #noise{position:absolute;inset:-35%;
-  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWx0PSIjRkZGIi8+PC9zdmc+");
+  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
   opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
 @keyframes noise{to{transform:translate(50%,50%);}}
 
 /* ── 터미널 영역 ── */
-#termWrap{width:90%;height:85%;overflow-y:auto;pointer-events:none;}
+#termWrap{width:90%;height:85%;overflow-y:auto;padding:2vmin;pointer-events:none;}
 #terminal{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;}
-.blink{animation:blink .8s step-end infinite;}
-@keyframes blink{50%{opacity:0;}}
+@keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
 
-@keyframes glitch{0%{transform:translate(0,0);}25%{transform:translate(-1px,1px);}
-50%{transform:translate(1px,-1px);}75%{transform:translate(-1px,-1px);}
-100%{transform:translate(1px,1px);}}
+/* 커서(깜빡임 제거) */
+#cursor{display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px;}
 </style>
 </head>
 <body>
@@ -62,7 +61,7 @@ CARD: NO NAME
 OFFSETS: F33 R279 D311
 
 MONITOR READY.
-&gt; <span id="typed" class="blink"></span></pre>
+&gt; <span id="typed"></span><span id="cursor"></span></pre>
       </div>
       <div id="noise"></div>
     </div>
@@ -70,47 +69,69 @@ MONITOR READY.
 </div>
 
 <script>
-const PASS="WATCHME";
-let buf="", ambience=false;
+/* ── 설정 ── */
+const PASS = "WATCHME";
+let buf = "", ambienceStarted = false;
 
-/* AudioCtx & 사운드 */
-let ctx; const AC=()=>ctx||(ctx=new (window.AudioContext||window.webkitAudioContext)());
-function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
-  o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
-  o.start();g.gain.exponentialRampToValueAtTime(0.0001,ac.currentTime+.35);o.stop(ac.currentTime+.36);}
-function startAmb(){if(ambience)return;ambience=true;
-  const ac=AC(),hum=ac.createOscillator(),g=ac.createGain();
-  hum.type="sine";hum.frequency.value=50;g.gain.value=.02;hum.connect(g).connect(ac.destination);hum.start();
-  const sz=ac.sampleRate*2,b=ac.createBuffer(1,sz,ac.sampleRate),d=b.getChannelData(0);
-  for(let i=0;i<sz;i++)d[i]=Math.random()*2-1;
-  const ns=ac.createBufferSource();ns.buffer=b;ns.loop=true;
-  const gn=ac.createGain();gn.gain.value=.015;ns.connect(gn).connect(ac.destination);ns.start();}
+/* 오디오 컨텍스트 및 사운드 */
+let ctx;
+const AC = () => ctx || (ctx = new (window.AudioContext || window.webkitAudioContext)());
+function playTone(freq, type) {
+  const ac = AC(), osc = ac.createOscillator(), g = ac.createGain();
+  osc.type = type; osc.frequency.value = freq; g.gain.value = .12;
+  osc.connect(g).connect(ac.destination); osc.start();
+  g.gain.exponentialRampToValueAtTime(0.0001, ac.currentTime + .35);
+  osc.stop(ac.currentTime + .36);
+}
+function startAmbience() {
+  if (ambienceStarted) return; ambienceStarted = true;
+  const ac = AC();
+  /* Hum */
+  const hum = ac.createOscillator(), hg = ac.createGain();
+  hum.type = "sine"; hum.frequency.value = 50; hg.gain.value = .02;
+  hum.connect(hg).connect(ac.destination); hum.start();
+  /* White noise */
+  const size = ac.sampleRate * 2, buf = ac.createBuffer(1, size, ac.sampleRate);
+  const data = buf.getChannelData(0); for (let i = 0; i < size; i++) data[i] = Math.random() * 2 - 1;
+  const noise = ac.createBufferSource(); noise.buffer = buf; noise.loop = true;
+  const ng = ac.createGain(); ng.gain.value = .015;
+  noise.connect(ng).connect(ac.destination); noise.start();
+}
 
-/* DOM 요소 */
-const screen=document.getElementById("screen"),tw=document.getElementById("termWrap"),
-      term=document.getElementById("terminal"),typed=document.getElementById("typed");
+/* DOM */
+const screen = document.getElementById("screen"),
+      wrap   = document.getElementById("termWrap"),
+      term   = document.getElementById("terminal"),
+      typed  = document.getElementById("typed"),
+      cursor = document.getElementById("cursor");
 
-screen.addEventListener("keydown",e=>{
-  startAmb();
-  if(e.key==="ArrowUp"){tw.scrollBy({top:-40,behavior:"smooth"});return;}
-  if(e.key==="ArrowDown"){tw.scrollBy({top:40,behavior:"smooth"});return;}
-  if(e.key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
-  if(e.key==="Enter"){e.preventDefault();run();return;}
-  if(e.key.length===1 && buf.length<64){buf+=e.key.toUpperCase();typed.textContent=buf;}
+screen.addEventListener("keydown", e => {
+  startAmbience();
+  if (e.key === "ArrowUp")  { wrap.scrollBy({top:-20, behavior:"smooth"}); return; }
+  if (e.key === "ArrowDown"){ wrap.scrollBy({top: 20, behavior:"smooth"}); return; }
+  if (e.key === "Backspace"){ e.preventDefault(); buf = buf.slice(0,-1); typed.textContent = buf; return; }
+  if (e.key === "Enter")    { e.preventDefault(); execute(); return; }
+  if (e.key.length === 1 && buf.length < 64){ buf += e.key.toUpperCase(); typed.textContent = buf; }
 });
 screen.focus();
 
-function append(t){term.innerHTML+=`\n${t}`;setTimeout(()=>tw.scrollTop=tw.scrollHeight,0);}
-function run(){
-  append(`> ${buf}`);
-  if(buf===PASS){
-    append("ACCESS GRANTED.");tone(440,"triangle");typed.classList.remove("blink");
-    setTimeout(()=>location.href="cctv.html",1400);
+function append(line){
+  term.innerHTML += "\n" + line;
+  setTimeout(()=>wrap.scrollTop = wrap.scrollHeight, 0);
+}
+
+function execute(){
+  append("> " + buf);
+  if(buf === PASS){
+    append("ACCESS GRANTED."); playTone(440, "triangle");
+    cursor.remove();                        // 커서 제거
+    setTimeout(()=>location.href="cctv.html", 1400);
   }else{
-    append("ACCESS DENIED.");screen.style.animation="glitch .28s 2";tone(120,"sawtooth");
-    setTimeout(()=>screen.style.animation="none",600);typed.classList.add("blink");
+    append("ACCESS DENIED.");
+    screen.style.animation = "glitch .28s 2"; playTone(120, "sawtooth");
+    setTimeout(()=>screen.style.animation = "none", 600);
   }
-  buf="";typed.textContent="";
+  buf = ""; typed.textContent = "";
 }
 </script>
 </body>
