--- a/login.html
+++ b/login.html
@@ -7,78 +7,55 @@
 <style>
 :root{--green:#32ff8a;--bg:#031c11;}
 *{margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace;}
-body{
-  height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
-  user-select:none;-webkit-user-select:none;-ms-user-select:none;
-}
+body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
+     user-select:none;-webkit-user-select:none;-ms-user-select:none;}
 
 /* ── 둥근 CRT 베젤 ── */
-#cabinet{
-  width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
+#cabinet{width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
   border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
-  display:flex;justify-content:center;align-items:center;
-}
+  display:flex;justify-content:center;align-items:center;}
 
-/* ── 모니터 유리판 ── */
-#monitor{
-  position:relative;width:97%;height:92%;background:var(--bg);
-  border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;
-}
+/* ── 유리판 ── */
+#monitor{position:relative;width:97%;height:92%;background:var(--bg);
+  border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;}
 
-/* ── 볼록 CRT 화면 ── */
-#screen{
-  position:absolute;inset:0;display:flex;flex-direction:column;
+/* ── 볼록 화면 ── */
+#screen{position:absolute;inset:0;display:flex;flex-direction:column;
   color:var(--green);text-shadow:0 0 4px var(--green);
-  transform:perspective(1000px) translateZ(90px);outline:none;
-}
+  transform:perspective(1000px) translateZ(90px);outline:none;}
 
-/* 스캔라인 + 비네팅 */
-#screen::before{
-  content:"";position:absolute;inset:0;
+/* 스캔라인 & 비네팅 */
+#screen::before{content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
-  mix-blend-mode:overlay;pointer-events:none;
-}
-#screen::after{
-  content:"";position:absolute;inset:0;
+  mix-blend-mode:overlay;pointer-events:none;}
+#screen::after{content:"";position:absolute;inset:0;
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
-  pointer-events:none;
-}
+  pointer-events:none;}
 
-/* 노이즈 */
-#noise{
-  position:absolute;inset:-35%;
+/* CRT 노이즈 */
+#noise{position:absolute;inset:-35%;
   background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
-  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;
-}
+  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
 @keyframes noise{to{transform:translate(50%,50%);}}
 
-/* ── 출력 / 입력 레이아웃 ── */
+/* ── 출력 영역 ── */
 #history{
-  flex:1 1 auto;width:100%;overflow-y:auto;padding:2vmin;
-  scrollbar-width:none;                 /* Firefox */
+  flex:1 1 auto;width:100%;overflow-y:auto;padding:2vmin 4vmin 0 4vmin;
+  scrollbar-width:none;
 }
-#history::-webkit-scrollbar{display:none}/* Chrome */
+#history::-webkit-scrollbar{display:none}
 pre{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;}
 
-#inputLine{
-  flex-shrink:0;padding:0 2vmin 2vmin;
-  font-size:2.2vmin;line-height:1.35;
-}
-#cursor{
-  display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px;
-}
+/* 입력 커서(깜빡임 없음) */
+#cursor{display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px;}
 
-@keyframes glitch{
-  0%,100%{transform:none;}
-  50%   {transform:translate(1px,-1px);}
-}
+@keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
 </style>
 </head>
 <body>
 <div id="cabinet">
   <div id="monitor">
     <div id="screen" tabindex="0">
-      <!-- 출력 영역 -->
       <div id="history">
 <pre id="histText">ULTIM809 COMPUTER BY MATT SARNOFF
 DEBUG ROM v0.3 – 28 JUN 2010
@@ -90,9 +67,12 @@ OFFSETS: F33 R279 D311
 
 MONITOR READY.</pre>
       </div>
-
-      <!-- 입력 프롬프트 -->
-      <div id="inputLine">&gt; <span id="typed"></span><span id="cursor"></span></div>
+      <!-- 첫 프롬프트를 출력에 직접 포함 -->
+      <script>
+      // 템플릿을 JS로 삽입해둡니다.
+      document.getElementById("histText").innerHTML +=
+        '\n&gt; <span id="typed"></span><span id="cursor"></span>';
+      </script>
       <div id="noise"></div>
     </div>
   </div>
@@ -101,33 +81,26 @@ MONITOR READY.</pre>
 <script>
 /* CONFIG */
 const PASS="WATCHME";
-let buf="", ambience=false;
+let buf="", ambience=false,
+    history=document.getElementById("history"),
+    typed=document.getElementById("typed");
 
 /* ── 오디오 ── */
 let ctx; const AC=()=>ctx||(ctx=new (window.AudioContext||window.webkitAudioContext)());
-function tone(f,type){
-  const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
-  o.type=type;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
+function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
+  o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
   o.start();g.gain.exponentialRampToValueAtTime(0.0001,ac.currentTime+.35);
-  o.stop(ac.currentTime+.36);
-}
-function startAmb(){
-  if(ambience) return; ambience=true;
+  o.stop(ac.currentTime+.36);}
+function startAmb(){if(ambience)return;ambience=true;
   const ac=AC(),hum=ac.createOscillator(),hg=ac.createGain();
-  hum.type="sine";hum.frequency.value=50;hg.gain.value=.02;
-  hum.connect(hg).connect(ac.destination);hum.start();
+  hum.type="sine";hum.frequency.value=50;hg.gain.value=.02;hum.connect(hg).connect(ac.destination);hum.start();
   const sz=ac.sampleRate*2,b=ac.createBuffer(1,sz,ac.sampleRate),d=b.getChannelData(0);
   for(let i=0;i<sz;i++)d[i]=Math.random()*2-1;
   const ns=ac.createBufferSource();ns.buffer=b;ns.loop=true;
-  const ng=ac.createGain();ng.gain.value=.015;ns.connect(ng).connect(ac.destination);ns.start();
-}
+  const ng=ac.createGain();ng.gain.value=.015;ns.connect(ng).connect(ac.destination);ns.start();}
 
-/* ── DOM ── */
-const screen=document.getElementById("screen"),
-      history=document.getElementById("history"),
-      histText=document.getElementById("histText"),
-      typed=document.getElementById("typed");
-
+/* ── 입력 핸들 ── */
+const screen=document.getElementById("screen");
 screen.addEventListener("keydown",e=>{
   startAmb();
   if(e.key==="ArrowUp"){history.scrollBy({top:-20,behavior:"smooth"});return;}
@@ -138,21 +111,31 @@ screen.addEventListener("keydown",e=>{
 });
 screen.focus();
 
-/* ── 동작 ── */
+/* ── 로그 & 실행 ── */
 function log(line){
-  histText.textContent+=`\n${line}`;
-  setTimeout(()=>history.scrollTop=history.scrollHeight,0);
+  const h=document.getElementById("histText");
+  h.innerHTML += '\n'+line;
 }
+function newPrompt(){
+  const h=document.getElementById("histText");
+  h.innerHTML += '\n&gt; <span id="typed"></span><span id="cursor"></span>';
+  typed=document.getElementById("typed");
+}
+function scrollBottom(){setTimeout(()=>history.scrollTop=history.scrollHeight,0);}
+
 function execute(){
   log(`> ${buf}`);
   if(buf===PASS){
-    log("ACCESS GRANTED.");tone(440,"triangle");
+    log("ACCESS GRANTED."); tone(440,"triangle");
     document.getElementById("cursor").remove();
+    scrollBottom();
     setTimeout(()=>location.href="cctv.html",1400);
   }else{
-    log("ACCESS DENIED.");
-    screen.style.animation="glitch .28s 2";tone(120,"sawtooth");
+    log("ACCESS DENIED.");  tone(120,"sawtooth");
+    screen.style.animation="glitch .28s 2";
     setTimeout(()=>screen.style.animation="none",600);
+    newPrompt();
+    scrollBottom();
   }
   buf="";typed.textContent="";
 }
