--- a/login.html
+++ b/login.html
@@ -33,20 +33,21 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
   pointer-events:none;}
 
 /* CRT 노이즈 */
-#noise{position:absolute;inset:-35%;
-  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48ZmlsdGVyIGlkPSJ6Ij48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
+#noise{position:absolute;inset:-35%;background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
   opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
 @keyframes noise{to{transform:translate(50%,50%);}}
 
 /* ── 출력 영역 ── */
 #history{
-  flex:1 1 auto;width:100%;overflow-y:auto;padding:2vmin 4vmin 0 4vmin;
+  flex:1 1 auto;width:100%;
+  overflow-y:auto;padding:3vmin 4vmin 0 6vmin;  /* 상3 우4 하0 좌6 vmin */
   scrollbar-width:none;
 }
-#history::-webkit-scrollbar{display:none}
-pre{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;}
+#history::-webkit-scrollbar{display:none;}
+pre{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;
+    overflow-wrap:anywhere;}
 
-/* 입력 커서(깜빡임 없음) */
+/* 커서(깜빡임 없음) */
 #cursor{display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px;}
 
 @keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
@@ -57,7 +58,7 @@ pre{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;}
   <div id="monitor">
     <div id="screen" tabindex="0">
       <div id="history">
-<pre id="histText">ULTIM809 COMPUTER BY MATT SARNOFF
+<pre id="log">ULTIM809 COMPUTER BY MATT SARNOFF
 DEBUG ROM v0.3 – 28 JUN 2010
 512KB AVAILABLE RAM
 
@@ -67,12 +68,6 @@ OFFSETS: F33 R279 D311
 
 MONITOR READY.</pre>
       </div>
-      <!-- 첫 프롬프트를 출력에 직접 포함 -->
-      <script>
-      // 템플릿을 JS로 삽입해둡니다.
-      document.getElementById("histText").innerHTML +=
-        '\n&gt; <span id="typed"></span><span id="cursor"></span>';
-      </script>
       <div id="noise"></div>
     </div>
   </div>
@@ -82,62 +77,59 @@ MONITOR READY.</pre>
 /* CONFIG */
 const PASS="WATCHME";
 let buf="", ambience=false,
-    history=document.getElementById("history"),
-    typed=document.getElementById("typed");
+    hist=document.getElementById("history"),
+    logbox=document.getElementById("log");
 
 /* ── 오디오 ── */
 let ctx; const AC=()=>ctx||(ctx=new (window.AudioContext||window.webkitAudioContext)());
 function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
   o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
-  o.start();g.gain.exponentialRampToValueAtTime(0.0001,ac.currentTime+.35);
-  o.stop(ac.currentTime+.36);}
-function startAmb(){if(ambience)return;ambience=true;
+  o.start();g.gain.exponentialRampToValueAtTime(.0001,ac.currentTime+.35);o.stop(ac.currentTime+.36);}
+function amb(){if(ambience)return;ambience=true;
   const ac=AC(),hum=ac.createOscillator(),hg=ac.createGain();
   hum.type="sine";hum.frequency.value=50;hg.gain.value=.02;hum.connect(hg).connect(ac.destination);hum.start();
   const sz=ac.sampleRate*2,b=ac.createBuffer(1,sz,ac.sampleRate),d=b.getChannelData(0);
   for(let i=0;i<sz;i++)d[i]=Math.random()*2-1;
-  const ns=ac.createBufferSource();ns.buffer=b;ns.loop=true;
-  const ng=ac.createGain();ng.gain.value=.015;ns.connect(ng).connect(ac.destination);ns.start();}
+  const n=ac.createBufferSource();n.buffer=b;n.loop=true;
+  const ng=ac.createGain();ng.gain.value=.015;n.connect(ng).connect(ac.destination);n.start();}
 
-/* ── 입력 핸들 ── */
-const screen=document.getElementById("screen");
-screen.addEventListener("keydown",e=>{
-  startAmb();
-  if(e.key==="ArrowUp"){history.scrollBy({top:-20,behavior:"smooth"});return;}
-  if(e.key==="ArrowDown"){history.scrollBy({top:20,behavior:"smooth"});return;}
-  if(e.key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
-  if(e.key==="Enter"){e.preventDefault();execute();return;}
-  if(e.key.length===1 && buf.length<64){buf+=e.key.toUpperCase();typed.textContent=buf;}
-});
-screen.focus();
-
-/* ── 로그 & 실행 ── */
-function log(line){
-  const h=document.getElementById("histText");
-  h.innerHTML += '\n'+line;
-}
+/* ── 프롬프트 생성 ── */
 function newPrompt(){
-  const h=document.getElementById("histText");
-  h.innerHTML += '\n&gt; <span id="typed"></span><span id="cursor"></span>';
-  typed=document.getElementById("typed");
+  logbox.innerHTML += '\n> <span id="typed"></span><span id="cursor"></span>';
+  buf="";typed=document.getElementById("typed");
+  hist.scrollTop = hist.scrollHeight;
 }
-function scrollBottom(){setTimeout(()=>history.scrollTop=history.scrollHeight,0);}
+newPrompt();           /* 최초 프롬프트 */
 
-function execute(){
-  log(`> ${buf}`);
+/* ── 키 입력 ── */
+let typed=document.getElementById("typed");
+document.getElementById("screen").addEventListener("keydown",e=>{
+  amb();
+  const k=e.key;
+  if(k==="ArrowUp"){hist.scrollBy({top:-20,behavior:"smooth"});return;}
+  if(k==="ArrowDown"){hist.scrollBy({top:20,behavior:"smooth"});return;}
+  if(k==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
+  if(k==="Enter"){e.preventDefault();execCmd();return;}
+  if(k.length===1 && buf.length<64){buf+=k.toUpperCase();typed.textContent=buf;}
+});
+document.getElementById("screen").focus();
+
+/* ── 명령 실행 ── */
+function log(line){logbox.textContent += '\n'+ line;}
+function execCmd(){
+  /* 프롬프트 라인 이미 기록돼 있으므로, 입력만 텍스트로 교체 */
+  typed.replaceWith(document.createTextNode(buf));
+  document.getElementById("cursor").remove();
   if(buf===PASS){
-    log("ACCESS GRANTED."); tone(440,"triangle");
-    document.getElementById("cursor").remove();
-    scrollBottom();
+    log("ACCESS GRANTED.");tone(440,"triangle");
+    hist.scrollTop = hist.scrollHeight;
     setTimeout(()=>location.href="cctv.html",1400);
   }else{
-    log("ACCESS DENIED.");  tone(120,"sawtooth");
+    log("ACCESS DENIED.");tone(120,"sawtooth");
     screen.style.animation="glitch .28s 2";
     setTimeout(()=>screen.style.animation="none",600);
     newPrompt();
-    scrollBottom();
   }
-  buf="";typed.textContent="";
 }
 </script>
 </body>
