--- a/login.html
+++ b/login.html
@@ -2,55 +2,69 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>CRT Terminal Login</title>
+<title>CRT Terminal Login</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-:root{--green:#32ff8a;--bg:#031c11;}
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace;}
-body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden;
-     user-select:none;-webkit-user-select:none;-ms-user-select:none;}
-
-/* ── 둥근 CRT 베젤 ── */
-#cabinet{width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
-  border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
-  display:flex;justify-content:center;align-items:center;}
-
+:root { --green:#32ff8a; --bg:#031c11; }
+* { margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace; }
+body {
+  height:100vh; background:#000;
+  display:flex;justify-content:center;align-items:center;
+  overflow:hidden; user-select:none;-webkit-user-select:none;-ms-user-select:none;
+}
+/* ── 베젤 ── */
+#cabinet {
+  width:90vw;max-width:1000px;height:70vh;max-height:700px;
+  background:#111;border-radius:80px;
+  box-shadow:0 0 40px #000 inset,0 0 60px #000;
+  display:flex;justify-content:center;align-items:center;
+}
 /* ── 유리판 ── */
-#monitor{position:relative;width:97%;height:92%;background:var(--bg);
-  border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;}
-
+#monitor {
+  position:relative;width:97%;height:92%;
+  background:var(--bg);border-radius:50px;
+  box-shadow:inset 0 0 140px #010;overflow:hidden;
+}
 /* ── 볼록 화면 ── */
-#screen{position:absolute;inset:0;display:flex;flex-direction:column;
+#screen {
+  position:absolute;inset:0;
+  display:flex;flex-direction:column;
   color:var(--green);text-shadow:0 0 4px var(--green);
-  transform:perspective(1000px) translateZ(90px);outline:none;}
-
+  transform:perspective(900px) translateZ(60px); /* 깊이 ↓ */
+  outline:none;
+}
 /* 스캔라인 & 비네팅 */
-#screen::before{content:"";position:absolute;inset:0;
+#screen::before {
+  content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
-  mix-blend-mode:overlay;pointer-events:none;}
-#screen::after{content:"";position:absolute;inset:0;
+  mix-blend-mode:overlay;pointer-events:none;
+}
+#screen::after {
+  content:"";position:absolute;inset:0;
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
-  pointer-events:none;}
-
+  pointer-events:none;
+}
 /* CRT 노이즈 */
-#noise{position:absolute;inset:-35%;background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
-  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
-@keyframes noise{to{transform:translate(50%,50%);}}
+#noise {
+  position:absolute;inset:-35%;
+  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
+  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;
+}
+@keyframes noise { to { transform:translate(50%,50%);} }
 
 /* ── 출력 영역 ── */
-#history{
+#history {
   flex:1 1 auto;width:100%;
-  overflow-y:auto;padding:3vmin 4vmin 0 6vmin;  /* 상3 우4 하0 좌6 vmin */
+  overflow-y:auto;padding:4vmin 4vmin 0 7vmin;  /* 상4·우4·하0·좌7 */
   scrollbar-width:none;
 }
-#history::-webkit-scrollbar{display:none;}
-pre{white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;
-    overflow-wrap:anywhere;}
+#history::-webkit-scrollbar { display:none; }
+pre { white-space:pre-wrap;font-size:2.2vmin;line-height:1.35;margin:0;overflow-wrap:anywhere; }
 
-/* 커서(깜빡임 없음) */
-#cursor{display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px;}
+/* 커서 바 */
+#cursor { display:inline-block;width:8px;height:1.3vmin;background:var(--green);margin-left:2px; }
 
-@keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
+@keyframes glitch { 0%,100%{transform:none;} 50%{transform:translate(1px,-1px);} }
 </style>
 </head>
 <body>
@@ -74,60 +88,71 @@ MONITOR READY.</pre>
 </div>
 
 <script>
-/* CONFIG */
-const PASS="WATCHME";
-let buf="", ambience=false,
-    hist=document.getElementById("history"),
-    logbox=document.getElementById("log");
+/* ========= 설정 ========= */
+const PASS = "WATCHME";
+let buf = "", ambience = false;
 
-/* ── 오디오 ── */
-let ctx; const AC=()=>ctx||(ctx=new (window.AudioContext||window.webkitAudioContext)());
-function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
-  o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
-  o.start();g.gain.exponentialRampToValueAtTime(.0001,ac.currentTime+.35);o.stop(ac.currentTime+.36);}
-function amb(){if(ambience)return;ambience=true;
-  const ac=AC(),hum=ac.createOscillator(),hg=ac.createGain();
-  hum.type="sine";hum.frequency.value=50;hg.gain.value=.02;hum.connect(hg).connect(ac.destination);hum.start();
-  const sz=ac.sampleRate*2,b=ac.createBuffer(1,sz,ac.sampleRate),d=b.getChannelData(0);
-  for(let i=0;i<sz;i++)d[i]=Math.random()*2-1;
-  const n=ac.createBufferSource();n.buffer=b;n.loop=true;
-  const ng=ac.createGain();ng.gain.value=.015;n.connect(ng).connect(ac.destination);n.start();}
+/* ========= 오디오 ========= */
+let ctx; const AC = () => ctx || (ctx = new (window.AudioContext||window.webkitAudioContext)());
+function tone(f, type){
+  const ac=AC(), o=ac.createOscillator(), g=ac.createGain();
+  o.type=type; o.frequency.value=f; g.gain.value=.12;
+  o.connect(g).connect(ac.destination); o.start();
+  g.gain.exponentialRampToValueAtTime(.0001, ac.currentTime + .35);
+  o.stop(ac.currentTime + .36);
+}
+function startAmb(){
+  if(ambience) return; ambience = true;
+  const ac=AC();
+  const hum=ac.createOscillator(), hg=ac.createGain();
+  hum.type="sine"; hum.frequency.value=50; hg.gain.value=.02;
+  hum.connect(hg).connect(ac.destination); hum.start();
+  const sz=ac.sampleRate*2, b=ac.createBuffer(1,sz,ac.sampleRate), d=b.getChannelData(0);
+  for(let i=0;i<sz;i++) d[i]=Math.random()*2-1;
+  const ns=ac.createBufferSource(); ns.buffer=b; ns.loop=true;
+  const ng=ac.createGain(); ng.gain.value=.015;
+  ns.connect(ng).connect(ac.destination); ns.start();
+}
 
-/* ── 프롬프트 생성 ── */
+/* ========= DOM ========= */
+const screen=document.getElementById("screen"),
+      hist  =document.getElementById("history"),
+      logbox=document.getElementById("log");
+
 function newPrompt(){
   logbox.innerHTML += '\n> <span id="typed"></span><span id="cursor"></span>';
-  buf="";typed=document.getElementById("typed");
-  hist.scrollTop = hist.scrollHeight;
+  typed=document.getElementById("typed");
+  buf=""; hist.scrollTop = hist.scrollHeight;
 }
-newPrompt();           /* 최초 프롬프트 */
+newPrompt();
 
-/* ── 키 입력 ── */
 let typed=document.getElementById("typed");
-document.getElementById("screen").addEventListener("keydown",e=>{
-  amb();
-  const k=e.key;
-  if(k==="ArrowUp"){hist.scrollBy({top:-20,behavior:"smooth"});return;}
-  if(k==="ArrowDown"){hist.scrollBy({top:20,behavior:"smooth"});return;}
-  if(k==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
-  if(k==="Enter"){e.preventDefault();execCmd();return;}
-  if(k.length===1 && buf.length<64){buf+=k.toUpperCase();typed.textContent=buf;}
-});
-document.getElementById("screen").focus();
 
-/* ── 명령 실행 ── */
+screen.addEventListener("keydown", e=>{
+  startAmb();
+  if(e.key==="ArrowUp"){hist.scrollBy({top:-20,behavior:"smooth"});return;}
+  if(e.key==="ArrowDown"){hist.scrollBy({top:20,behavior:"smooth"});return;}
+  if(e.key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
+  if(e.key==="Enter"){e.preventDefault();process();return;}
+  if(e.key.length===1 && buf.length<64){buf+=e.key.toUpperCase();typed.textContent=buf;}
+});
+screen.focus();
+
+/* ========= 실행 ========= */
 function log(line){logbox.textContent += '\n'+ line;}
-function execCmd(){
-  /* 프롬프트 라인 이미 기록돼 있으므로, 입력만 텍스트로 교체 */
+function process(){
+  /* typed → 평문 텍스트로 확정 출력 */
   typed.replaceWith(document.createTextNode(buf));
   document.getElementById("cursor").remove();
+
   if(buf===PASS){
-    log("ACCESS GRANTED.");tone(440,"triangle");
+    log("ACCESS GRANTED."); tone(440,"triangle");
     hist.scrollTop = hist.scrollHeight;
-    setTimeout(()=>location.href="cctv.html",1400);
+    setTimeout(()=>location.href="cctv.html", 1400);
   }else{
-    log("ACCESS DENIED.");tone(120,"sawtooth");
+    log("ACCESS DENIED."); tone(120,"sawtooth");
     screen.style.animation="glitch .28s 2";
-    setTimeout(()=>screen.style.animation="none",600);
+    setTimeout(()=>screen.style.animation="none", 600);
     newPrompt();
   }
 }
