--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -147,7 +147,7 @@ function check(){
     msg.style.color = "var(--green)";
     msg.textContent = "ACCESS GRANTED";
     tone(440, "triangle");
-    setTimeout(()=>location.href="cctv.html", 1400);
+    setTimeout(()=>location.href="system-01-Acess.html", 1400);
   } else {
     msg.style.color = "#f44";
     msg.textContent = "ACCESS DENIED";
