--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -81,7 +81,7 @@ input{caret-color:transparent;}
 </div>
 
 <script>
-const PASS = "WATCHME";
+const PASS = "LETMEIN";
 let buf = "", ambienceStarted = false;   /* 불린 변수 이름 변경 */
 
 let ctx;
